{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 125,
  "lineage": "72fd6b03-c872-5a52-918a-33047ab18186",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "api-geniusee-local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:329002494659:loadbalancer/api-geniusee-local-1o51g9",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "api-geniusee-local-1o51g9-681115547.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "SSL:443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "api-geniusee-local-1o51g9",
            "idle_timeout": 300,
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "TCP",
                "lb_port": 443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "api-geniusee-local-1o51g9",
            "security_groups": [
              "sg-07b12a239380b85f7",
              "sg-099912f6ac3cb77d8"
            ],
            "source_security_group": "329002494659/api-elb.geniusee.local",
            "source_security_group_id": "sg-099912f6ac3cb77d8",
            "subnets": [
              "subnet-04a4fe9bc92314834",
              "subnet-065d74ee3e9423a6d",
              "subnet-08243cd9b8ae816e1"
            ],
            "tags": {
              "KubernetesCluster": "geniusee.local",
              "Name": "api.geniusee.local",
              "kubernetes.io/cluster/geniusee.local": "owned"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.api-elb-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-elb-geniusee-local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329002494659:security-group/sg-099912f6ac3cb77d8",
            "description": "Security group for api ELB",
            "egress": [],
            "id": "sg-099912f6ac3cb77d8",
            "ingress": [],
            "name": "api-elb.geniusee.local",
            "name_prefix": null,
            "owner_id": "329002494659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "geniusee.local",
              "Name": "api-elb.geniusee.local",
              "kubernetes.io/cluster/geniusee.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02db6b8cd1dd7bd00"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-geniusee-local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329002494659:security-group/sg-0caa959ff651e1d5d",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-0caa959ff651e1d5d",
            "ingress": [],
            "name": "masters.geniusee.local",
            "name_prefix": null,
            "owner_id": "329002494659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "geniusee.local",
              "Name": "masters.geniusee.local",
              "kubernetes.io/cluster/geniusee.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02db6b8cd1dd7bd00"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-geniusee-local",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:329002494659:security-group/sg-063e95f81276ee0ea",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-063e95f81276ee0ea",
            "ingress": [],
            "name": "nodes.geniusee.local",
            "name_prefix": null,
            "owner_id": "329002494659",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "geniusee.local",
              "Name": "nodes.geniusee.local",
              "kubernetes.io/cluster/geniusee.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02db6b8cd1dd7bd00"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2581263177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-0caa959ff651e1d5d",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2575006220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063e95f81276ee0ea",
            "self": false,
            "source_security_group_id": "sg-0caa959ff651e1d5d",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local",
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3004357613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063e95f81276ee0ea",
            "self": false,
            "source_security_group_id": "sg-063e95f81276ee0ea",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api-elb-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3944890888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-099912f6ac3cb77d8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.api-elb-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-elb-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-107424516",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-099912f6ac3cb77d8",
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.api-elb-geniusee-local",
            "aws_security_group.masters-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1284340553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2270315439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063e95f81276ee0ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-3519433694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-063e95f81276ee0ea",
            "to_port": 2379,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local",
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-2516441415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-063e95f81276ee0ea",
            "to_port": 4000,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local",
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-801644109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-063e95f81276ee0ea",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local",
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-993467151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0caa959ff651e1d5d",
            "self": false,
            "source_security_group_id": "sg-063e95f81276ee0ea",
            "to_port": 65535,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.masters-geniusee-local",
            "aws_security_group.nodes-geniusee-local"
          ]
        }
      ]
    }
  ]
}